--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/
+spring.datasource.url = jdbc:mysql://localhost:3306/dykedb
 spring.datasource.username = root
 spring.datasource.password = root
+
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto=create
