--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password = root
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=create
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
